<resources>
    <string name="app_name">PollRelay</string>
    <string name="hint_district">District</string>
    <string name="label_select">Select</string>
    <string name="hint_region">Region</string>
    <string name="hint_constituency">Constituency</string>
    <string name="hint_sub_county">Sub-County</string>
    <string name="hint_parish">Parish</string>
    <string name="hint_poling_station">Polling Station</string>
    <string name="hint_position">Election</string>
    <string name="label_56_example">56</string>
    <string name="hint_candidate_name">Simon P Ojok</string>
    <string name="label_total_vote">Total Vote</string>
    <string name="label_photo_dr_forms">Please attach pictures of Declaration Forms [ D . R ]</string>
    <string name="label_election_results">Election Results</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>