<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".form.FormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--               Region  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/border_rectangular"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/hint_region"
                android:gravity="start|center"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/label_select"/>
        </LinearLayout>

<!--        District -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/border_rectangular"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/hint_district"
                android:gravity="start|center"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/label_select"/>
        </LinearLayout>
<!--        Constituency -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/border_rectangular"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/hint_constituency"
                android:gravity="start|center"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/label_select"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/border_rectangular"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/hint_sub_county"
                android:gravity="start|center"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/label_select"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/border_rectangular"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/hint_parish"
                android:gravity="start|center"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/label_select"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/border_rectangular"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/hint_poling_station"
                android:gravity="start|center"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/label_select"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/border_rectangular"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:hint="@string/hint_position"
                android:gravity="start|center"
                android:textSize="20sp"
                android:layout_marginEnd="2dp"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/label_select"/>
        </LinearLayout>

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:background="@color/colorPrimary">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Election Results"
               android:gravity="center"
               android:background="@drawable/round_border_rectangle"
               android:padding="20dp"
               android:textColor="#fff"
               android:textStyle="bold"
               android:textAllCaps="true"
               android:textSize="35sp"/>
       </FrameLayout>

    </LinearLayout>

</ScrollView>